Adding snippets and RN work

--- a/Content/Topics/Assortment Planning/Assortment Buy Sheet Report.htm
+++ b/Content/Topics/Assortment Planning/Assortment Buy Sheet Report.htm
@@ -18,7 +18,7 @@
         </p>
         <ul>
             <li>
-                <p><span class="Emphasis">Product</span>: Selects a product filter for the current view</p>
+                <p><span class="Emphasis">Product</span>: a product filter for the current view</p>
                 <ul>
                     <li>
                         <img src="../../Resources/Images/Assortment Planning/View Parameters.png" class="IconInline" />&#160; Launches the Filter Conditions dialog, allowing the user to dynamically edit the criteria for the selected filter prior to executing it. The option also exists to create a new filter from the adjusted criteria dynamically.</li>
@@ -26,14 +26,14 @@
                         <img src="../../Resources/Images/Assortment Planning/View Parameters_1.png" class="IconInline" />&#160; Launches the Maintain Filter dialog, allowing the user to create or import a new filter, or update, delete, or export an existing filter.</li>
                 </ul>
             </li>
-            <li><span class="Emphasis">Site Hierarchy</span>: Selects the levels of the current plan’s Site Hierarchy to include in the current view.</li>
+            <li><span class="Emphasis">Site Hierarchy</span>: the levels of the current plan’s Site Hierarchy to include in the current view.</li>
             <li>
-                <p><span class="Emphasis">Cluster Sets</span>:&#160;&#160; Selects the cluster sets to include in the current view. The cluster sets listed include all default and "additionally available" cluster sets for the product level selected in the Product parameter.</p>
+                <p><span class="Emphasis">Cluster Sets</span>:&#160;&#160; the cluster sets to include in the current view. The cluster sets listed include all default and "additionally available" cluster sets for the product level selected in the Product parameter.</p>
                 <p class="BasicNote">While cluster sets are not explicitly part of the Site Hierarchy, they are directly related. Cluster sets in a given assortment plan must be contained within a single lowest level of that hierarchy. Therefore, the Cluster Set dropdown shows the cluster sets contained beneath the selected Site Hierarchy levels.</p>
             </li>
             <li>
-                <p><span class="Emphasis">Window of Time</span>: Selects the window of time to display in the current view. </p>
-                <p>Any placeholder whose life cycle intersects with any part of the selected Window of Time displays in the view. This allows users to view placeholders holistically as displaying subdivisions of their life cycle might alter the decisions made by users if they have forgotten or are unaware of the full length of time a placeholder is for sale.</p>
+                <p><span class="Emphasis">Window of Time</span>: the window of time to display in the current view. </p>
+                <p>Any placeholder whose life cycle intersects with any part of the selected Window of Time displays in the view. Users can view placeholders holistically as displaying subdivisions of their life cycle might alter the decisions made by users if they have forgotten or are unaware of the full length of time a placeholder is for sale.</p>
                 <p>The selected time frame must be a contiguous range of periods otherwise the system still uses the window of time defined by the first and last selected periods.</p>
             </li>
             <li><span class="Emphasis">Display Currency</span>: Sets the currency to display for all revenue based fields in the view. This defaults to the Home Currency for the active Assortment Plan.</li>
