--- a/Content/Topics/Assortment Planning/Generating placeholders.htm
+++ b/Content/Topics/Assortment Planning/Generating placeholders.htm
@@ -67,66 +67,7 @@
             </li>
         </ul>
         <p class="BasicNote"> Which fields to display is set using system policy <span class="Emphasis">Product Level Display</span> (Module: Assortment).</p>
-        <h2>Wholesale related metrics</h2>
-        <p>The following wholesale related metrics are available in the main planning view and the Cluster Sets, Sales Plan, Receipt Plan, and Top Down Core Plan views:</p>
-        <table style="width: 100%;">
-            <col />
-            <col />
-            <tbody>
-                <tr>
-                    <td>
-                        <ul>
-                            <li>
-                                <p>Discount %</p>
-                            </li>
-                            <li>
-                                <p>At Once ($)</p>
-                            </li>
-                            <li>
-                                <p>At Once (U)</p>
-                            </li>
-                            <li>
-                                <p>Cancel %</p>
-                            </li>
-                            <li>
-                                <p>Bookings Cancelled ($)</p>
-                            </li>
-                            <li>
-                                <p>Bookings Cancelled (U)</p>
-                            </li>
-                            <li>
-                                <p>Bookings Placed ($)</p>
-                            </li>
-                            <li>
-                                <p>Bookings Placed (U)</p>
-                            </li>
-                        </ul>
-                    </td>
-                    <td>
-                        <ul>
-                            <li>
-                                <p>Bookings Shipped ($)</p>
-                            </li>
-                            <li>
-                                <p>Bookings Shipped (U)</p>
-                            </li>
-                            <li>
-                                <p>Sell Out ($)</p>
-                            </li>
-                            <li>
-                                <p>Sell Out (U)</p>
-                            </li>
-                            <li>
-                                <p>Bookings Shipped/Sell Out Var</p>
-                            </li>
-                            <li>
-                                <p>Bookings Shipped/Sell Out Var %</p>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <MadCap:snippetBlock src="../../Resources/Snippets/Wholesale Metrics in AP.flsnp" />
         <p>
             <img src="../../Resources/Images/Assortment Planning/Wholesale Metrics MPV.png" class="LargeImages">
             </img>
