--- a/Content/Topics/Assortment Planning/Multi-Currency Price View.htm
+++ b/Content/Topics/Assortment Planning/Multi-Currency Price View.htm
@@ -65,9 +65,8 @@
                     <td class="TableStyle-standard-BodyB-Column1-Body1"><span class="Emphasis">Translation Factor</span>
                     </td>
                     <td class="TableStyle-standard-BodyA-Column2-Body1">
-                        <p>The translation factor to apply to determine the final blended ticket price in home and local currencies for the selected placeholder for the period.</p>
-                        <p><span class="Emphasis">Calculation</span>: Home AUT ex VAT Equivalent / Home AUT ex VAT</p>
-                    </td>
+                       The translation factor to apply to determine the final blended ticket price in home and local currencies for the selected placeholder for the period. 
+                        <p><span class="Emphasis">Calculation</span>: Home AUT ex VAT Equivalent / Home AUT ex VAT</p></td>
                 </tr>
             </tbody>
         </table>
