--- a/Content/Topics/Assortment Planning/Receipt Plan View.htm
+++ b/Content/Topics/Assortment Planning/Receipt Plan View.htm
@@ -183,6 +183,7 @@ Users can click the <span class="Emphasis">Recalculate Receipts</span> button wh
         <h3>Restoring default constraints</h3>
         <p>Default constraints for both placeholders and placeholder clusters can be restored by selecting the <span class="Emphasis">Restore Default Constraints</span> button. </p>
         <p class="BasicNote">As part of restoring the default constraints involves resetting the receipt periods for the placeholder/collection, receipts are automatically recalculated as part of this process. Therefore, using this function has the side-effect of marking the placeholder/collection in question Clean in the Receipt Status field of the main planning view.</p>
+        <MadCap:snippetBlock src="../../Resources/Snippets/Wholesale Metrics in AP.flsnp" />
         <h2>Assortment Receipt Plan Constraints Placeholder grid</h2>
         <ul>
             <li>
