--- a/Content/Topics/Assortment Planning/Sales Plan View.htm
+++ b/Content/Topics/Assortment Planning/Sales Plan View.htm
@@ -176,67 +176,7 @@
             <li>all Inventory Adjustments metrics (see below) can still be planned normally</li>
         </ul>
         <p class="BasicNote">Common uses for this feature might be items that repeat seasonally, such as holiday themed goods, where inventory is retained between selling periods.</p>
-        <h2>Wholesale related metrics</h2>
-        <p>The following wholesale related metrics are available in the main planning view and the Cluster Sets, Sales Plan, Receipt Plan, and Top Down Core Plan views:</p>
-        <table style="width: 100%;">
-            <col />
-            <col />
-            <tbody>
-                <tr>
-                    <td>
-                        <ul>
-                            <li>
-                                <p>Discount %</p>
-                            </li>
-                            <li>
-                                <p>At Once ($)</p>
-                            </li>
-                            <li>
-                                <p>At Once (U)</p>
-                            </li>
-                            <li>
-                                <p>Cancel %</p>
-                            </li>
-                            <li>
-                                <p>Bookings Cancelled ($)</p>
-                            </li>
-                            <li>
-                                <p>Bookings Cancelled (U)</p>
-                            </li>
-                            <li>
-                                <p>Bookings Placed ($)</p>
-                            </li>
-                            <li>
-                                <p>Bookings Placed (U)</p>
-                            </li>
-                        </ul>
-                    </td>
-                    <td>
-                        <ul>
-                            <li>
-                                <p>Bookings Shipped ($)</p>
-                            </li>
-                            <li>
-                                <p>Bookings Shipped (U)</p>
-                            </li>
-                            <li>
-                                <p>Sell Out ($)</p>
-                            </li>
-                            <li>
-                                <p>Sell Out (U)</p>
-                            </li>
-                            <li>
-                                <p>Bookings Shipped/Sell Out Var</p>
-                            </li>
-                            <li>
-                                <p>Bookings Shipped/Sell Out Var %</p>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <p MadCap:conditions="General.ScreenOnly">For more information relating to wholesale planning, see <MadCap:xref href="../Wholesale Planning/Wholesale Planning Overview.htm">Wholesale Planning Overview</MadCap:xref>.</p>
+        <MadCap:snippetBlock src="../../Resources/Snippets/Wholesale Metrics in AP.flsnp" />
         <h2>Metric definitions</h2>
         <h3>SALES</h3>
         <table style="width: 100%;margin-left: auto;margin-right: auto;mc-table-style: url('../../Resources/TableStyles/standard.css');" class="TableStyle-standard" cellspacing="0">
