--- a/Content/Topics/Assortment Planning/Top Down Core Plan.htm
+++ b/Content/Topics/Assortment Planning/Top Down Core Plan.htm
@@ -230,5 +230,6 @@ calculation is Receipt Units * Receipt AUC.</td>
                 </tr>
             </tbody>
         </table>
+        <MadCap:snippetBlock src="../../Resources/Snippets/Wholesale Metrics in AP.flsnp" />
     </body>
 </html>
