--- a/Content/Topics/Release Notes/Assortment Planning.htm
+++ b/Content/Topics/Release Notes/Assortment Planning.htm
@@ -7,19 +7,19 @@
         <h2>Using a price matrix with Smart Start within AP</h2>
         <p>TG JE Assortment Planning v2024.1 introduced the TG JE Price Matrix to better support planning in multiple currencies. TG JE v2024.2 extends this functionality into Assortment Planning Smart Start. (Smart Start is not enabled for the standalone Target Choice Count module.)</p>
         <p class="BasicNote">Please refer to the TG JE v2024.1 release notes for an extensive description of TG JE's ability to plan in multiple currencies via a Price Matrix.</p>
-        <p>With the introduction of TG JE Price Matrix, the AP Smart Start process was updated as follows:</p>
+        <p>With the introduction of TG JE Price Matrix, the AP Smart Start process has been updated as follows:</p>
         <ul>
-            <li>
+            <li MadCap:conditions="General.DoNotPublish">
                 <p>The <span class="Emphasis">AUT Discount %</span> step has been changed to occur earlier in the process</p>
             </li>
             <li>
-                <p>Derived values are not seeded</p>
+                <p>derived values are not seeded</p>
             </li>
-            <li>
+            <li MadCap:conditions="General.DoNotPublish">
                 <p>The <span class="Emphasis">Apply</span> procedure runs instead of <span class="Emphasis">Reconcile</span> to derive <span class="Emphasis">Blended AUT</span> and <span class="Emphasis">AUR</span></p>
             </li>
             <li>
-                <p>VAT conversions will not be used if Price Matrix enabled</p>
+                <p>there are no VAT conversions if Price Matrix functionality is enabled</p>
             </li>
         </ul>
         <p><span class="Emphasis">Blended AUT</span> and <span class="Emphasis">AUR</span> are derived from a <span class="Emphasis">Home AUT</span>. 
