--- a/Content/Topics/Release Notes/Target Choice Count.htm
+++ b/Content/Topics/Release Notes/Target Choice Count.htm
@@ -90,14 +90,13 @@
         </p>
         <p>Phase date changes automatically trigger a re-calculation of the sales plan and Carryover numbers in the upper grid.</p>
         <p class="BasicNote">Sales Plan fields are frozen left and the cell color formatted if the item is in phase. Fields formatted in blue are editable.</p>
-        <h3>Maximum number of periods in a scenario</h3>
+        <h3>Maximum number of periods in scenarios with updates</h3>
         <p>The number of periods in a scenario that contain updates is limited to 53 weeks.  If users try to add updates on a scenario with a larger window of time, the following message displays and updates are not created.</p>
         <p>
             <img src="../../Resources/Images/Target Choice Count/Updates 53 Period Limit.png" class="LargeImages" />
         </p>
-        <p>If a user tries to change Window of Time after updates are created, the updates are cleared anyway.</p>
-        <h3>Date validations</h3>
-        <p>The following message displays for date validations:</p>
+        <p>If a user tries to change the Window of Time after updates are created, the updates are cleared anyway.</p>
+        <p>Specifying update, markdown, and end periods that are not sequential generates the following message:</p>
         <p>
             <img src="../../Resources/Images/Assortment Planning/Date Validations.png" class="LargeImages" />
         </p>
