--- a/Content/Topics/Release Notes/Allocation.htm
+++ b/Content/Topics/Release Notes/Allocation.htm
@@ -6,13 +6,13 @@
     <body>
         <h1>Allocations</h1>
         <h2>Resolving issues in a more timely manner</h2>
-        <p>Users now have a quick and convenient way to investigate why an order from a selected Allocation Strategy didn't happen. With the insight the new <span class="Emphasis">Health Check</span> tab provides, users can resolve certain issues independently and quickly, reducing the need to escalate support tickets and the time to resolution. </p>
+        <p>Users now have a quick and convenient way to investigate why an order from a selected Allocation Strategy didn't happen. With the insight the new <span class="Emphasis">Health Check</span> tab provides, users can resolve certain issues independently and quickly, reducing the need to escalate support tickets and reducing the time to resolution. </p>
         <p>
             <img src="../../Resources/Images/Allocations/Health Check Tab.png" class="LargeImages" />
         </p>
         <p>The new <span class="Emphasis">Health Check</span> tab can be found on the Allocation Strategy view.</p>
         <h3>Steps and conditions</h3>
-        <p>There are four possible conditions:</p>
+        <p>There are four possible color coded conditions:</p>
         <table style="margin-left: 0;margin-right: auto;mc-table-style: url('../../Resources/TableStyles/standard.css');" class="TableStyle-standard" cellspacing="0">
             <col class="TableStyle-standard-Column-Column1" style="width: 20%;" />
             <col class="TableStyle-standard-Column-Column2" />
