--- a/Content/Topics/Release Notes/Assortment Planning.htm
+++ b/Content/Topics/Release Notes/Assortment Planning.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Assortment Planning</h1>
-        <h2>Using a price matrix with Smart Start within AP</h2>
+        <h2>Using a price matrix with Smart Start</h2>
         <p>TG JE Assortment Planning v2024.1 introduced the TG JE Price Matrix to better support planning in multiple currencies. TG JE v2024.2 extends this functionality into Assortment Planning Smart Start. (Smart Start is not enabled for the standalone Target Choice Count module.)</p>
         <p class="BasicNote">Please refer to the TG JE v2024.1 release notes for an extensive description of TG JE's ability to plan in multiple currencies via a Price Matrix.</p>
         <p>With the introduction of TG JE Price Matrix, the AP Smart Start process has been updated as follows:</p>
@@ -35,7 +35,7 @@ This means that the Smart Started <span class="Emphasis">AUR</span> value is not
             </li>
         </ul>
         <h2>Managing attribute-based sub-clusters across views</h2>
-        <p>Existing sub-clustering functionality allows users, via Cluster Sets view, to grade and cluster (ABC) store cluster sets based on sales performance and then sub-cluster by a site-specific Lookup attribute type (such as Cold, Hot, Warm), including user defined attributes. The result is adjustments to phase periods based on site attributes. The sub-clustering functionality is now extended to the following:</p>
+        <p>Existing sub-clustering functionality allows users, via Cluster Sets view, to grade and cluster (ABC) store cluster sets based on sales performance and then sub-cluster by a site-specific attribute type (such as Cold, Hot, Warm), including user defined attributes. The result is adjustments to phase periods based on site attributes. The sub-clustering functionality is now extended to the following:</p>
         <ul>
             <li>
                 <p>Receipt Plan view</p>
