--- a/Content/Topics/Release Notes/Resolved Issues Log.htm
+++ b/Content/Topics/Release Notes/Resolved Issues Log.htm
@@ -21,9 +21,9 @@
             </thead>
             <tbody>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">&#160;</td>
-                    <td class="TableStyle-standard-BodyE-Column2-Body1">&#160;</td>
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">&#160;</td>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1">Assortment</td>
+                    <td class="TableStyle-standard-BodyE-Column2-Body1">Expand Sub-Cluster Aggregation</td>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1">Epic</td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">&#160;</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -33,9 +33,15 @@
                     <td class="TableStyle-standard-BodyD-Column2-Body1">&#160;</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyB-Column1-Body1">&#160;</td>
-                    <td class="TableStyle-standard-BodyB-Column2-Body1">&#160;</td>
-                    <td class="TableStyle-standard-BodyB-Column1-Body1">&#160;</td>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1">Site Manager</td>
+                    <td class="TableStyle-standard-BodyE-Column2-Body1">Enhance Attributes to include non lookups. Amend widget to allow multiple Editors.</td>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1">Story</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">&#160;</td>
+                </tr>
+                <tr class="TableStyle-standard-Body-Body1">
+                    <td class="TableStyle-standard-BodyB-Column1-Body1">Target Choice Counts</td>
+                    <td class="TableStyle-standard-BodyB-Column2-Body1">Choices by Sequential Update</td>
+                    <td class="TableStyle-standard-BodyB-Column1-Body1">Epic</td>
                     <td class="TableStyle-standard-BodyA-Column2-Body1">&#160;</td>
                 </tr>
             </tbody>
