--- a/Content/Topics/Release Notes/Site Manager.htm
+++ b/Content/Topics/Release Notes/Site Manager.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Site Manager </h1>
-        <p>Improvements have been made to Site Manager. Now users can configure multiple enterable attributes in addition to the existing support for Lookup Attributes. This brings Site Manager into line with supported Variant Manager functionality. </p>
+        <p>Previously, Variant Manager supported additional attributes that Site Manager did not. With TG JE v2024.2, Site Manager has been enhanced to make the two modules consistent.</p>
         <p>The newly supported attribute types in Site Manager are DateTime, True/False, Integers, Floats, Short Text and Long Text. So, for example, users can add an attribute for Store Size (integer), Checkout Count (integer), Prime Store (True/False), Store Expected Revamp (DateTime), and so on.</p>
     </body>
 </html>
