--- a/Content/Topics/Release Notes/Target Choice Count.htm
+++ b/Content/Topics/Release Notes/Target Choice Count.htm
@@ -4,14 +4,14 @@
     </head>
     <body>
         <h1>Target Choice Count</h1>
-        <h2>Generating choice recommendations that factor in defined choices</h2>
-        <p>Existing functionality rationalized update periods as self-contained buckets. This resulted in a choice count output by update that didn't consider the choice recommendations within the other periods. Users were required to merge styles across periods using a merging process that was not fully optimal from a user experience point of view. As a result of a significant overhaul TG JE v2024.2 introduces a new user workflow-centric enhancement.</p>
+        <h2>Generating recommendations that factor in defined choices</h2>
+        <p>Existing functionality rationalized update periods as self-contained buckets. This resulted in a choice count output by update that didn't consider the choice recommendations within the other periods. Users were required to merge styles across periods using a merging process that was not fully optimal from a user experience point of view. TG JE v2024.2 introduces a greatly improved user oriented workflow.</p>
         <p>With this workflow, users define update periods and then generate choice recommendations beginning with the first update period. The user can then define the phase out date for choices recommended, including phase out dates that correspond to a future update end period. This allows the second update period to factor in defined choices that are already accounted for within that first update period.</p>
-        <h2>Curves added to Segment Definitions on Edit Target Scenario view</h2>
-        <p>The following existing metrics were added to the <span class="Emphasis">Segment Definitions</span> section: <span class="Emphasis">Seasonality Curve</span>, <span class="Emphasis">Lifecycle Curve</span>, <span class="Emphasis">Markdown Curve</span>, and <span class="Emphasis">Seasonality Curve Weight Factor</span>. The curves can be automatically assigned from hierarchy defaults.</p>
+        <h3>Curves</h3>
+        <p>The following were added to the <span class="Emphasis">Segment Definitions</span> section: <span class="Emphasis">Seasonality Curve</span>, <span class="Emphasis">Lifecycle Curve</span>, <span class="Emphasis">Markdown Curve</span>, and <span class="Emphasis">Seasonality Curve Weight Factor</span>. The curves can be automatically assigned from hierarchy defaults.</p>
         <p>Hierarchy defaults, but not Cluster defaults, are automatically assigned if  they have been set  (for placeholders created both manually within the main planning view and through the Smart Start function). </p>
         <h3>Segment Floor Set Updates widget DMDEV-91523</h3>
-        <p>The following fields were added to the Segment Floor Set Updates grid:</p>
+        <p>The following fields were added to the <span class="Emphasis">Segment Floor Set Updates</span> grid:</p>
         <table style="width: 100%;">
             <col style="width: 499px;" />
             <col />
@@ -61,7 +61,7 @@
                 </tr>
             </tbody>
         </table>
-        <p class="BasicNote">The same fields appear when the <span class="Emphasis">Target Choices By Update view</span> view is launched (with some  fields hidden by default)  and the <span class="Emphasis">Edit Target Scenario</span> view which launches when copying or editing Target Scenarios. All the configurable fields are visible and editable in the main planning view.</p>
+        <p class="BasicNote">The same fields appear when the <span class="Emphasis">Target Choices By Update view</span> view is launched (with some  fields hidden by default)  and in the <span class="Emphasis">Edit Target Scenario</span> view which launches when copying or editing Target Scenarios. All the configurable fields are visible and editable in the main planning view.</p>
         <p>The markdown date is a user-enterable default markdown period for items in an update.   The selection available in the dropdown depends on the configuration of <span class="Emphasis">End Date Definition</span> for the scenario.  If <span class="Emphasis">Phase Out Date</span> is selected, it  show periods between Phase In and Phase Out.  If <span class="Emphasis">Last Regular Date</span> is selected, it shows any period between Phase In and the scenario's last regular period.</p>
         <p>Setting  <span class="Emphasis">End Date Definition</span> to <span class="Emphasis">Phase Out Date</span> automatically updates the <span class="Emphasis">Default Markdown Period</span> and <span class="Emphasis">Default End Period</span> fields depending on the subsequent update's start period:</p>
         <p>
@@ -72,7 +72,7 @@
             <img src="../../Resources/Images/Assortment Planning/End Date Definition Set To Last Regular Date.png" class="LargeImages" />
         </p>
         <h2>Target Choices By Update view</h2>
-        <p>The <span class="Emphasis">Target Choices By Update</span> view, which displays by selecting toolbar option <span class="Emphasis">View Choices By Update</span> on the<span class="Emphasis"> Edit Target Scenario</span> view, has been reconfigured as follows. Users can:</p>
+        <p>The <span class="Emphasis">Target Choices By Update</span> view, which displays by selecting toolbar option <span class="Emphasis">View Choices By Update</span> on the <span class="Emphasis">Edit Target Scenario</span> view, has been reconfigured as follows. Users can:</p>
         <ul>
             <li>
                 <p>click between updates in the top view to display the to-date complete set of recommended choices in the bottom view</p>
@@ -91,7 +91,7 @@
         <p>Phase date changes automatically trigger a re-calculation of the sales plan and Carryover numbers in the upper grid.</p>
         <p class="BasicNote">Sales Plan fields are frozen left and the cell color formatted if the item is in phase. Fields formatted in blue are editable.</p>
         <h3>Maximum number of periods in scenarios with updates</h3>
-        <p>The number of periods in a scenario that contain updates is limited to 53 weeks.  If users try to add updates on a scenario with a larger window of time, the following message displays and updates are not created.</p>
+        <p>The number of periods in a scenario that contain updates is limited to 53 weeks.  If users try to add updates on a scenario with a larger Window of Time, the following message displays and updates are not created.</p>
         <p>
             <img src="../../Resources/Images/Target Choice Count/Updates 53 Period Limit.png" class="LargeImages" />
         </p>
